kubernetes/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service 
spec:
  ports:
    - name: mariadb 
      #Listen on 3306 and then forward the request to port 3306 in the pod
      port: 3306 
      targetPort: 3306 
  #Send requests in a load balanced fashion to containers with the selector app=dbtraining
  selector:
    app: dbtraining
